# azure-embedded-sdk-rs

./: .gitignore  Cargo.toml  README.md
src/: az_core.rs  az_iot.rs  az_return_codes.rs  lib.rs
