[package]
name = "azure-embedded-sdk-rs"
version = "0.1.0"
authors = ["Mark Radbourne <markrad@msn.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# azure-embedded-sdk-sys = { path = "../azure-embedded-sdk-sys" }
azure-embedded-sdk-sys = { git = "https://github.com/markrad/azure-embedded-sdk-sys.git", tag = "v0.1.0"  }
