[package]
name = "azure-embedded-sdk-rs"
version = "0.2.1"
authors = ["Mark Radbourne <markrad@msn.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# azure-embedded-sdk-sys = { path = "../azure-embedded-sdk-sys" }
azure-embedded-sdk-sys = { git = "https://github.com/markrad/azure-embedded-sdk-sys.git", rev = "c93ad77b9176e4e17f70edfef410b4a2333bb18f" }
